Correções nas Páginas de Admin.

--- a/GraoPara-BD2/src/main/webapp/css/principal.css
+++ b/GraoPara-BD2/src/main/webapp/css/principal.css
@@ -56,19 +56,20 @@ a img {
 
 /* ~~ Styling for your site's links must remain in this order - including the group of selectors that create the hover effect. ~~ */
 a:link {
-	color: green;
+	color: blue;
 	text-decoration: none;
 	/* unless you style your links to look extremely unique, it's best to provide underlines for quick visual identification */
 }
 
 a:visited {
-	color: green;
+	color: blue;
 	text-decoration: none;
 }
 
 a:hover,a:active,a:focus {
 	/* this group of selectors will give a keyboard navigator the same hover experience as the person using a mouse. */
-	text-decoration: none;
+	color: blue;
+	text-decoration: underline;
 }
 
 /* ~~ this container surrounds all other divs giving them their percentage-based width ~~ */
