--- a/GraoPara-BD2/src/main/webapp/css/styleValidation.css
+++ b/GraoPara-BD2/src/main/webapp/css/styleValidation.css
@@ -139,11 +139,12 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
 }
 
 #signupform label.error {
-  background:url("/GraoPara/images/unchecked.gif") no-repeat 0px 0px;
+  /* background:url("/GraoPara/images/unchecked.gif") no-repeat 0px 0px; */
   padding-left: 16px;
   padding-bottom: 2px;
-  font-weight: bold;
-  color: #EA5200;
+  font-size: small;
+  /* font-weight: normal; */
+  color: #DD4B39;
 }
 
 #signupform label.checked {
