--- a/GraoPara-BD2/src/main/webapp/css/principal.css
+++ b/GraoPara-BD2/src/main/webapp/css/principal.css
@@ -37,12 +37,15 @@ ul,ol,dl {
 
 h1,h2,h3,h4,h5,h6 {
 	margin-top: 0;
+	margin-left: 100px;
 	/* removing the top margin gets around an issue where margins can escape from their containing div. The remaining bottom margin will hold it away from any elements that follow. */
 	/* padding-right: 15px;
 	padding-left: 15px; */
 	/* adding the padding to the sides of the elements within the divs, instead of the divs themselves, gets rid of any box model math. A nested div with side padding can also be used as an alternate method. */
-	text-align: -moz-center;
-	color: black;
+	/* text-align: -moz-center; */
+	font-style: oblique;
+    font-weight: lighter;
+	color: #24346F;
 }
 
 h1 {
@@ -76,11 +79,11 @@ a:hover,a:active,a:focus {
 
 /* Originalmente as divs tinham layout líquido (porcentagem) mas falando com o Arlindo, foi decidido deixar mais estático */
 .container {
-	max-width: 1024px !important;
+	max-width: 1110px !important; /* valor anterior: 1024px */
 	/* a max-width may be desirable to keep this layout from getting too wide on a large monitor. This keeps line length more readable. IE6 does not respect this declaration. */
-	min-width: 810px !important;
+	min-width: 810px !important; /* valor anterior: 810px */
 	background-color: #FFF !important;
-	margin: 0 auto !important;
+	margin: 0 auto !important; 
 	/* the auto value on the sides, coupled with the width, centers the layout. It is not needed if you set the .container's width to 100%. */
 	font-size: 100% !important;
 }
@@ -105,7 +108,7 @@ a:hover,a:active,a:focus {
 	-webkit-box-shadow: 0 -1px 0 0px #000;
 	/* box-shadow: 0 -1px 0 0px #000; */
 	border: 1px solid gray;
-	width: 151px;
+	width: 184px;
 	height: 23px;
 	margin-left: -5px;
 	color: #000;
@@ -370,7 +373,7 @@ label {
 /*Se eu não me engano, é a barra onde está os botões e o painelzinho de login */
 .sidebar1 {
 	float: left;
-	width: 180px;
+	width: 209px; /* Valor anterior: 180px; */
 	height: 1200px;
 	background-color: #24346F;
 	padding-bottom: 10px;
@@ -408,6 +411,10 @@ ul.nav {
     border-top: 0px solid #24346F;
     margin-bottom: -1px;
     margin-top: -1px;
+    
+    /* Acrescentados posteriormente */
+    width: 202px;
+    margin-left: -1px;
 }
 
 ul.nav li {
@@ -524,8 +531,10 @@ span.asterisco {
 .tableForms {
 	text-align: left;
 	/* margin: 40px 0 0 0px; */
+	margin-left: 100px;
 	width: 580px;
-	border: 0px;
+	border-top: 1px solid;
+    border-bottom: 1px solid;
 }
 
 .tablePesquisa {
@@ -608,9 +617,11 @@ article.menuLateral section,article.menuLateral section h2 {
 
 /*Menu com borda arredondada*/
 .bordaBox {
+	border: 0px solid;
 	background: transparent;
-	width: 174px;
-	padding: 10px 3px;
+	width: 200px; /* 174px; */
+	padding: 5px 3px; /* 10px 3px; */
+	 
 }
 
 .bordaBox .b1,.bordaBox .b2,.bordaBox .b3,.bordaBox .b4,.bordaBox .b1b,.bordaBox .b2b,.bordaBox .b3b,.bordaBox .b4b
@@ -653,8 +664,11 @@ article.menuLateral section,article.menuLateral section h2 {
 .bordaBox .conteudo {
 	font-size: small;
 	padding: 1px;
-	display: block;
 	background: #FFF;
+	/* display: block;
 	border-left: 1px solid #839AE6;
-	border-right: 1px solid #839AE6;
+	border-right: 1px solid #839AE6; */
+	
+	/* Acrescentado posteriormente */
+	width: 201px;
 }
