--- a/GraoPara-BD2/src/main/webapp/css/styleValidation.css
+++ b/GraoPara-BD2/src/main/webapp/css/styleValidation.css
@@ -1,4 +1,4 @@
-@CHARSET "UTF-8";/* GENERAL ELEMENTS */
+@CHARSET "UTF-8";  /* GENERAL ELEMENTS */
 
 /* PAGE ELEMENTS */
 /*
@@ -10,85 +10,99 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
 .largelink { border: 1px solid #cacaca; padding: 10px; background-color: #E8EEF7; font-size: 1.2em; font-weight: bold; }
 .largelinkwrap { padding-top: 10px; padding-bottom: 10px; }
 */
-
 #signuptab {
-  float:left;
-  width:100%;
-  background:#fff url("bg.gif") repeat-x bottom;
-  font-size: 1.0em;
-  line-height: normal;
+	float: left;
+	width: 100%;
+	background: #fff url("bg.gif") repeat-x bottom;
+	font-size: 1.0em;
+	line-height: normal;
 }
+
 #signuptab ul {
-  margin:0;
-  padding: 0px 10px 0px 10px;
-  list-style:none;
+	margin: 0;
+	padding: 0px 10px 0px 10px;
+	list-style: none;
 }
+
 #signuptab li {
-  float:left;
-  background:url("left_white.png") no-repeat left top;
-  margin:0;
-  padding:0 3px 0 9px;
-  border-bottom:1px solid #CACACA;
+	float: left;
+	background: url("left_white.png") no-repeat left top;
+	margin: 0;
+	padding: 0 3px 0 9px;
+	border-bottom: 1px solid #CACACA;
 }
+
 #signuptab a {
-  float:left;
-  display:block;
-  width:.1em;
-  background:url("right_white.png") no-repeat right top;
-  padding:2px 15px 0px 6px;
-  text-decoration:none;
-  font-weight:bold;
-  color:#fff;
-  white-space: nowrap;
+	float: left;
+	display: block;
+	width: .1em;
+	background: url("right_white.png") no-repeat right top;
+	padding: 2px 15px 0px 6px;
+	text-decoration: none;
+	font-weight: bold;
+	color: #fff;
+	white-space: nowrap;
 }
-#signuptab > ul a {width:auto;}
+
+#signuptab>ul a {
+	width: auto;
+}
 /* Commented Backslash Hack hides rule from IE5-Mac \*/
-#signuptab a {float:none;}
+#signuptab a {
+	float: none;
+}
 /* End IE5-Mac hack */
 #signuptab a:hover {
-  color:#333;
+	color: #333;
 }
+
 #signuptab #signupcurrent {
-  background-position:0 -150px;
-  border-width:0;
+	background-position: 0 -150px;
+	border-width: 0;
 }
+
 #signuptab #signupcurrent a {
-  background-position:100% -150px;
-  padding-bottom:1px;
-  color:#000;
+	background-position: 100% -150px;
+	padding-bottom: 1px;
+	color: #000;
 }
-#signuptab li:hover, #signuptab li:hover a {
-  background-position:0% -150px;
-  color:#000;
+
+#signuptab li:hover,#signuptab li:hover a {
+	background-position: 0% -150px;
+	color: #000;
 }
+
 #signuptab li:hover a {
-  background-position:100% -150px;
+	background-position: 100% -150px;
 }
 
 /* Signup box */
-
 #signupbox {
-  width: 100%;
-  text-align: center;
-  margin: 0em auto;
+	width: 100%;
+	text-align: center;
+	margin: 0em auto;
 }
 
 #signupwrap {
-  border: 1px solid #CACACA;
-  border-top: 0;
-  text-align: left;
-  padding: 35px 10px 20px 30px;
-  clear: both;
+	border: 1px solid #CACACA;
+	border-top: 0;
+	text-align: left;
+	padding: 35px 10px 20px 30px;
+	clear: both;
 }
 
 /* Unsupported browsers */
+.orange_rbcontent {
+	padding: 0.4em;
+}
 
-.orange_rbcontent { padding: 0.4em; }
-.orange_rbroundbox { width: 100%; }
+.orange_rbroundbox {
+	width: 100%;
+}
 
 #unsupported {
-  font-weight: bold;
-  text-align: left;
+	font-weight: bold;
+	text-align: left;
 }
 
 /*#content {
@@ -96,114 +110,116 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
 }*/
 
 /* Signup form */
-
 #signupform table {
-  border-spacing: 0px;
-  border-collapse: collapse;
-  empty-cells: show;
+	border-spacing: 0px;
+	border-collapse: collapse;
+	empty-cells: show;
 }
 
 #signupform .label {
-  padding-top: 2px;
-  padding-right: 8px;
-  vertical-align: top;
-  text-align: right;
-  width: 125px;
-  white-space: nowrap;
+	padding-top: 2px;
+	padding-right: 8px;
+	vertical-align: top;
+	text-align: right;
+	width: 125px;
+	white-space: nowrap;
 }
 
 #signupform .field {
-  padding-bottom: 0px;
-  padding-left:0px;
-  width: 120px;
-  white-space: nowrap;
+	padding-bottom: 0px;
+	padding-left: 0px;
+	width: 120px;
+	white-space: nowrap;
+	/* border: 1px solid; */
+	text-align: left;
 }
 
 #signupform .status {
-  padding-top: 2px;
-  padding-left: 8px;
-  vertical-align: top;
-  font-size: 11px;
-  white-space: nowrap;
+	padding-top: 2px;
+	padding-left: 8px;
+	vertical-align: top;
+	font-size: 11px;
+	white-space: nowrap;
 }
+
 #signupform .textfield {
-  width: 150px;
+	width: 150px;
 }
 
-#signupform input.error { 
+#signupform input.error {
 	border: 1px solid #DD4B39;
 }
 
-#signupform select.error { 
+#signupform select.error {
 	border: 1px solid #DD4B39;
 }
 
-#signupform textarea.error { 
+#signupform textarea.error {
 	border: 1px solid #DD4B39;
 }
-	
+
 #signupform label.error {
-  /* background:url("/GraoPara/images/unchecked.gif") no-repeat 0px 0px; */
-  padding-left: 0px;
-  /* padding-bottom: 2px; */
-  font-size: small;
-  vertical-align: -7px;
-  /* font-weight: normal; */
-  color: #DD4B39;
+	/* background:url("/GraoPara/images/unchecked.gif") no-repeat 0px 0px; */
+	padding-left: 0px;
+	/* padding-bottom: 2px; */
+	font-size: small;
+	vertical-align: -7px;
+	/* font-weight: normal; */
+	color: #DD4B39;
 }
 
 #signupform label.checked {
-  background:url("/GraoPara/images/checked.gif") no-repeat 0px 0px;
+	background: url("/GraoPara/images/checked.gif") no-repeat 0px 0px;
 }
 
 #signupform .success_msg {
-  font-weight: bold;
-  color: #0060BF;
-  margin-left: 19px;
+	font-weight: bold;
+	color: #0060BF;
+	margin-left: 19px;
 }
 
-#signupform #dateformatStatus, #signupform #termsStatus {
-  margin-left: 6px;
+#signupform #dateformatStatus,#signupform #termsStatus {
+	margin-left: 6px;
 }
 
 #signupform #dateformat_eu {
- vertical-align: middle;
+	vertical-align: middle;
 }
 
 #signupform #ldateformat_eu {
-  font-weight: normal;
-  vertical-align: middle;
+	font-weight: normal;
+	vertical-align: middle;
 }
 
 #signupform #dateformat_am {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 #signupform #ldateformat_am {
-  font-weight: normal;
-  vertical-align: middle;
+	font-weight: normal;
+	vertical-align: middle;
 }
 
 #signupform #termswrap {
-  float: left;
+	float: left;
 }
 
 #signupform #terms {
-  vertical-align: middle;
-  float: left;
-  display: block;
-  margin-right: 5px;
+	vertical-align: middle;
+	float: left;
+	display: block;
+	margin-right: 5px;
 }
 
 #signupform #lterms {
-  font-weight: normal;
-  vertical-align: middle;
-  float: left;
-  display: block;
-  width: 350px;
-  white-space: normal;
+	font-weight: normal;
+	vertical-align: middle;
+	float: left;
+	display: block;
+	width: 350px;
+	white-space: normal;
 }
 
 #signupform #lsignupsubmit {
-  visibility: hidden;
+	visibility: hidden;
 }
