Alinhados os campos de pesquisa de palavra-chave.

--- a/GraoPara-BD2/src/main/webapp/css/styleValidation.css
+++ b/GraoPara-BD2/src/main/webapp/css/styleValidation.css
@@ -134,6 +134,15 @@ table.tabbedtable label { text-align: right; padding-right: 9px; }
 	text-align: left;
 }
 
+#signupform .fieldNewUser {
+	padding-bottom: 0px;
+	padding-left: 0px;
+	width: 150px;
+	white-space: nowrap;
+	/* border: 1px solid; */
+	text-align: left;
+}
+
 #signupform .status {
 	padding-top: 2px;
 	padding-left: 8px;
