--- a/GraoPara-BD2/src/main/webapp/css/principal.css
+++ b/GraoPara-BD2/src/main/webapp/css/principal.css
@@ -150,7 +150,7 @@ a:hover,a:active,a:focus {
 	/* Atributo para dar espaço no texto inserido, especie de margin, mas do texto e não do campo em si */
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: small;
-	font-style: italic;
+	/* font-style: italic; */
 	letter-spacing: 1px;
 }
 
