--- a/GraoPara-BD2/src/main/webapp/css/principal.css
+++ b/GraoPara-BD2/src/main/webapp/css/principal.css
@@ -359,24 +359,38 @@ a:hover,a:active,a:focus {
 }
 
 /* Estilo do botão de entrar do painel de login, está sendo reaproveitado para vários outros botões */
-.buttonEntrar,.buttonRegistrar,.buttonCancelar,.buttonLimpar,.buttonSair
-	{
-	width: 80px;
-	height: 25px;
+.buttonEntrar,.buttonRegistrar,.buttonCancelar,.buttonLimpar,.buttonSair {
+	width: 90px;
+	/* height: 25px; */
+	border: 1px solid #24346F;
+	background: #033454; /* #24346F; */
+	padding: 2px 10px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+	/* -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	-moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+    box-shadow: rgba(0,0,0,1) 0 1px 0;
+    text-shadow: rgba(0,0,0,.4) 0 1px 0; */
 	text-align: center;
-	border: none;
-	float: inherit;
-	background: #24346F;
-	-webkit-border-radius: .3em;
-	-moz-border-radius: .3em;
-	border-radius: .3em;
-	-webkit-box-shadow: 0 0px 1px rgba(255, 255, 255,);
-	-moz-box-shadow: 0 0px 1px rgba(255, 255, 255);
-	/* box-shadow: 0 0px 1px rgba(255, 255, 255,); */
 	color: white;
+	font-size: small;
+    font-family: Georgia, Serif;
+    text-decoration: none;
+    vertical-align: middle;
 	cursor: pointer;
-	margin-left: 2px;
+	/* float: inherit; */
+	/* -webkit-box-shadow: 0 0px 1px rgba(255, 255, 255,);
+	-moz-box-shadow: 0 0px 1px rgba(255, 255, 255); */
+	/* box-shadow: 0 0px 1px rgba(255, 255, 255,); */
+	/* margin-left: 2px; */
 }
+
+.buttonEntrar:hover,.buttonRegistrar:hover,.buttonCancelar:hover,.buttonLimpar:hover,.buttonSair:hover {
+	border: 1px solid #3e779d;
+    background: #3e779d;
+    color: #ffffff;
+   }
 
 .buttonCancelar {
 	margin-right: 80px;
@@ -462,7 +476,7 @@ label {
 	float: left;
 	width: 208px; /* Valor anterior: 180px; */
 	height: 1300px; /* 1280px; */
-	background-color: #24346F;
+	background-color: #033454; /* #24346F; */
 	padding-bottom: 10px;
 }
 
@@ -507,16 +521,15 @@ ul.nav {
 
 ul.nav li {
     font-size: small;
-    border-top: 1px solid #24346F;
+    border-top: 1px dotted #24346F;
     right: auto;
 }
 
-.noBorderTop {
+.borderTop {
 	font-size: small;
     list-style: none outside none;
-    border-top: 0px solid #24346F;
     margin-bottom: -1px;
-    margin-top: -1px
+    margin-top: -4px
 }
 
 ul.nav a,ul.nav a:visited {
@@ -531,7 +544,7 @@ ul.nav a,ul.nav a:visited {
 
 ul.nav a:hover,ul.nav a:active,ul.nav a:focus {
 	/* this changes the background and text color for both mouse and keyboard navigators */
-	background-color: #95B2F0;
+	background-color: #3e779d;
 	color: #FFF;
 }
 
@@ -549,7 +562,7 @@ ul.nav a:hover,ul.nav a:active,ul.nav a:focus {
 /* ~~ The footer ~~ */
 .footer {
 	padding: 10px 0;
-	background-color: #24346F;
+	background-color: #033454; /* #24346F; */
 	text-align: center;
 	text-shadow: #000;
 	position: relative; /* this gives IE6 hasLayout to properly clear */
@@ -717,7 +730,7 @@ article.menuLateral section,article.menuLateral section h2 {
 	border: 0px solid;
 	background: transparent;
 	width: 200px; /* 174px; */
-	padding: 5px 3px; /* 10px 3px; */
+	padding: 3px 3px; /* 10px 3px; */
 	 
 }
 
