--- a/GraoPara-BD2/src/main/webapp/css/principal.css
+++ b/GraoPara-BD2/src/main/webapp/css/principal.css
@@ -358,6 +358,19 @@ a:hover,a:active,a:focus {
 	letter-spacing: 1px;
 }
 
+.keyInf {	
+	border: 1px solid gray;
+	width: 130px;
+	height: 22px; /* 20px */
+	margin: 0px 0;
+	color: #000;
+	padding: 0 0 0 0px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: small;
+	font-style: italic;
+	letter-spacing: 1px;
+}
+
 /* Estilo do botão de entrar do painel de login, está sendo reaproveitado para vários outros botões */
 .buttonEntrar,.buttonRegistrar,.buttonCancelar,.buttonLimpar,.buttonSair {
 	width: 90px;
@@ -601,6 +614,15 @@ apagado quando o usuário digitar algo dentro, para isso use o atributo placehol
 .labelForms {
 	font-size: small;
 	/* font-weight: bold; */
+	text-align: left;
+}
+
+.fieldDocInf {
+	padding-bottom: 0px;
+	padding-left: 0px;
+	width: 120px;
+	white-space: nowrap;
+	/* border: 1px solid; */
 	text-align: left;
 }
 
