--- a/GraoPara-BD2/src/main/webapp/css/principal.css
+++ b/GraoPara-BD2/src/main/webapp/css/principal.css
@@ -204,7 +204,7 @@ a:hover,a:active,a:focus {
 	height: 23px; /* 20px */
 	margin: 5px 0;
 	color: #000;
-	padding: 0 0 0 10px;
+	/* padding: 0 0 0 10px; */
 	font-family: Arial, Helvetica, sans-serif;
 	/* font-size: small; */
 	font-style: italic;
@@ -714,6 +714,7 @@ span.asterisco {
 }
 
 .tableList {
+	border: 1px solid;
 	text-align: center;
 	width: 585px;
 }
